syntax = "proto3";

package rphaven.gsts.v1;

import "google/protobuf/timestamp.proto";

import "gsts/v1/meet.proto";
import "gsts/v1/token.proto";

message ConsumeMemberToken {
  Wallet wallet = 1;
  Member volunteer = 2;
  Meet meet = 3;
  repeated Token tokens = 4;
}

message TokenConsumption {
  oneof result {
    TokensConsumed success = 1;
    TokensNotConsumed error = 2;
  }
}

message TokensConsumed {
    TokenTransaction transaction = 1;
}

message TokenTransaction {
  bytes transaction_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  Member member = 3;
  Member volunteer = 4;
  repeated Token tokens = 5;
}

message TokensNotConsumed {
  TokenTransaction transaction = 1;
}

message Wallet {
  bytes id = 1;
  Member member = 2;
}

message Member {
  bytes id = 1;
  string username = 2;
  string name = 3;
}

